--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 {% for post in site.posts %}
 <h1>Posts</h1>
 <article>
-    <h2><a href="{{site.baseurl}}{{post.url}}">{{post.title}}</a></h2>
+    <h2><a href="{{post.url}}">{{post.title}}</a></h2>
     {{post.excerpt}}
 </article>
 {% endfor %}
